# ai-assistant-workspace

./: .gitignore  AGENTS.md  BOOTSTRAP.md  README.md
skills/: README.md
skills/arxiv/: README.md  SKILL.md
skills/bridge-ideas/: SKILL.md
skills/calendar/: SKILL.md  calendar_check.py  pyproject.toml
skills/cat-diary/: SKILL.md
skills/diagram-generator/: SKILL.md  draw_diagram.py
skills/diary/: SKILL.md
skills/github-repo-analyzer/: SKILL.md
skills/google-workspace/: README.md  SKILL.md
skills/health-advisor/: SKILL.md
skills/marp-slides/: SKILL.md
skills/multi-agent/: SKILL.md
skills/note-taking/: SKILL.md
skills/notion-manager/: README.md  SKILL.md  notion_tool.py  pyproject.toml
skills/podcast/: SKILL.md
skills/podcast/scripts/: podcast_downloader.py  pyproject.toml
skills/skill-creator/: SKILL.md
skills/skill-creator/references/: checklist.md  patterns.md  templates.md
skills/spontaneous-talk/: SKILL.md  check_speak.sh
skills/tech-news-curation/: SKILL.md
skills/transcriber/: SKILL.md
skills/workspace-rag/: SKILL.md  workspace_rag.py
skills/workspace-rag/scripts/: workspace_rag.py  workspace_rag_server.py
skills/xangi-settings/: SKILL.md
skills/xangi-settings/references/: env-variables.md
skills/youtube-notes/: SKILL.md
triggers/: README.md
triggers/rag/: README.md  handler.sh  trigger.yaml
triggers/technews/: README.md  handler.sh  trigger.yaml
triggers/weather/: README.md  handler.sh  trigger.yaml
